syntax = "proto3";
option csharp_namespace = "Issues.API.Protos";


service StatusService{
	rpc GetStatuses(GetStatusesRequest) returns (GetStatusesResponse);
	//rpc GetStatusesForGroupOfIssues(GetStatusesForGroupOfIssuesRequest) returns (GetStatusesForGroupOfIssuesResponse) //TODO in domain logic
	rpc GetStatus(GetStatusRequest) returns (GetStatusResponse);
	rpc CreateStatus(CreateStatusRequest) returns (CreateStatusResponse);
	rpc RenameStatus(RenameStatusRequest) returns (RenameStatusResponse);
}

message GetStatusesRequest{

}

message GetStatusesResponse{
	repeated Status statuses = 1;
}

message GetStatusRequest{
	string id = 1;
}

message GetStatusResponse{
	Status status = 1;
}

message CreateStatusRequest{
	string name = 1;
}

message CreateStatusResponse{
	string id = 1;
}


message RenameStatusRequest{
	string id = 1;
	string name = 2;
}

message RenameStatusResponse{

}

message Status{
	string id = 1;
	string name = 2;
}