syntax = "proto3";
option csharp_namespace = "Issues.API.Protos";

//TODO
service TypeOfIssueService{
	rpc GetTypesOfIssues(GetTypesOfIssuesRequest) returns (GetTypesOfIssuesResponse);
	//rpc GetTypesOfIssuesForGroup(GetTypesOfIssuesForGroupRequest) returns (GetTypesOfIssuesForGroupResponse); //TODO in domain logic
	rpc GetTypeOfIssue(GetTypeOfIssueRequest) returns (GetTypeOfIssueResponse);
	rpc CreateTypeOfIssue(CreateTypeOfIssueRequest) returns (CreateTypeOfIssueResponse);
	rpc ArchiveTypeOfIssue(ArchiveTypeOfIssueRequest) returns (ArchiveTypeOfIssueResponse);
	rpc RenameTypeOfIssue(RenameTypeOfIssueRequest) returns (RenameTypeOfIssueResponse);
}

message GetTypesOfIssuesRequest{

}

message GetTypesOfIssuesResponse{
	repeated TypeOfIssues types = 1;
}

message GetTypeOfIssueRequest{
	string id = 1;
}

message GetTypeOfIssueResponse{
	TypeOfIssues type = 1;
}

message CreateTypeOfIssueRequest{
	string name = 1;
}

message CreateTypeOfIssueResponse{
	string id = 1;
}

message ArchiveTypeOfIssueRequest{
	string id = 1;
}

message ArchiveTypeOfIssueResponse{

}

message RenameTypeOfIssueRequest{
	string id = 1;
	string name = 2;
}

message RenameTypeOfIssueResponse{

}

message TypeOfIssues{
	string id = 1;
	string name = 2;
	bool isArchived = 3;
}